--- a/app/src/main/res/layout/bottomsheetlayout_foodrecord.xml
+++ b/app/src/main/res/layout/bottomsheetlayout_foodrecord.xml
@@ -101,7 +101,7 @@
             android:gravity="center">
 
             <NumberPicker
-                android:id="@+id/numberpicker_gram"
+                android:id="@+id/numberpicker_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:theme="@style/NumberPickerStyle" />
@@ -111,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="g"
+                android:text="식사 시간"
                 android:textSize="16sp"
                 android:textColor="@color/grey"
                 android:fontFamily="@font/nbold"
