--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -66,6 +66,10 @@
         <item name="android:includeFontPadding">false</item>
     </style>
     
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+    </style>
+    
     <!--<style name="ToolBarTheme" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/nbold</item>
         <item name="android:includeFontPadding">false</item>
