--- a/app/src/main/res/layout/grow_sprout.xml
+++ b/app/src/main/res/layout/grow_sprout.xml
@@ -78,13 +78,13 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-        app:lottie_autoPlay="true"
+        app:lottie_autoPlay="false"
         app:lottie_fileName="plant-sprout.json"
         app:lottie_loop="false"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/grow_sprout_lvl_text"
         style="@style/TextBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -106,7 +106,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/grow_sprout_lvl_text"
         app:lottie_autoPlay="false"
         app:lottie_fileName="EXPbar.json"
         app:lottie_loop="false" />
