--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -88,24 +88,13 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_marginTop="16dp"
-            android:gravity="center_vertical">
+            android:layout_marginTop="32dp"
+            android:gravity="center_vertical"
+            android:layout_gravity="center">
 
-            <CheckBox
-                android:id="@+id/login_keep"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1"
-                android:fontFamily="@font/nregular"
-                android:includeFontPadding="false"
-                android:text="@string/login_keep"
-                android:textSize="14sp"
-                android:textColor="@color/almostBlack"
-                tools:ignore="TouchTargetSizeCheck" />
 
             <TextView
                 android:id="@+id/forget_password"
@@ -123,7 +112,6 @@
                 android:id="@+id/login_to_userinfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="18dp"
                 android:text="@string/go_to_user_info"
                 android:textSize="14sp"
                 android:textColor="@color/mainGreen"/>
